# Mimora

./: .gitignore  .gitmodules  AGENTS.md  CLA.md  README.md  config.py  install.py  llm.py  main.py  practice_text.txt  pyproject.toml  requirements.txt  settings.json  tts.py  ui.py
.github/workflows/: cla.yml
audio_capture/: __init__.py  mic_test.py  recorder.py  requirements.txt
config/: settings.example.json
config/themes/: dark_schema.json  light_schema.json
docs/: architecture.md  configuration.md  development.md  engine-openpronounce-base.md  engine-phoneme-multilingual.md
echoloop/: audio_io.py  config.py  face_widget.py  llm.py  llm_server_ctl.py  recorder.py  tts.py  ui.py
hwconfig/: detect_hardware.py
llm_server/: README.md  requirements.txt  server.py
mimora/: __init__.py  audio_io.py  bootstrap.py  config.py  engine.py  face_widget.py  lifecycle.py  llm.py  llm_server_ctl.py  loader.py  phoneme_examples.py  phrase_source.py  playback.py  progress_widget.py  prosody.py  prosody_utils.py  recorder.py  session.py  settings_ctl.py  settings_window.py  stt.py  test_prosody_utils.py  translator.py  tts.py  ui.py  ui_hero.py  ui_history.py  ui_practice.py  ui_prosody.py  ui_theme.py
mimora/languages/: __init__.py  english.py  spanish.py
pronounce/: __init__.py  calibrate.py  config.py  requirements.txt  speech.py  test_speech.py
pronounce_common/: __init__.py
pronounce_phoneme/: __init__.py  config.py  requirements.txt  speech.py
pronunciation/: __init__.py
prototypes/: README.md  _bootstrap.py  allosaurus_pronounce_poc.py  core_prod.py  core_w2v2.py  eval_core.py  recall_ablation.py  requirements.txt  run_eval.py  w2v2_pronounce_poc.py  wav2vec2_compare_poc.py
tests/: test_face_interaction.py  test_language_profiles.py  test_loader.py  test_phoneme.py  test_phrase_level.py  test_phrase_source.py  test_prosody.py  test_prosody_utils.py  test_session.py  test_settings_ctl.py  test_settings_fields.py  test_speech.py
texts/: practice_text.txt  practice_text_es.txt
themes/: dark_schema.json  light_schema.json
tools/: check_markers.py  check_wheels.py  detect_hardware.py  smoke_test_llama.py  sweep_llama_versions.py
(+16 files in other folders)
