[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mimora"
version = "0.1.0"
description = "Local, offline pronunciation trainer: Kokoro TTS prompts, Wav2Vec2 scoring, local LLM phrase generation."
readme = "README.md"
# Tested on 3.11 and 3.12; 3.13+ not yet supported (as of June 2026).
requires-python = ">=3.11,<3.13"
license = { file = "LICENSE" }

# The app is run from the project root (`python main.py`) and is not meant to
# be installed; this file documents project metadata and the package layout.
# Runtime dependencies stay in requirements.txt (plus llm_server/ and
# pronunciation/acoustic/, pronunciation/phoneme/ requirements) because they
# are installed per-machine with CPU/CUDA variants.
[tool.setuptools]
packages = ["mimora", "pronunciation"]
