[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mimora"
# Version is the single source of truth in mimora/__init__.py (read dynamically below).
dynamic = ["version"]
description = "Local, offline pronunciation trainer: Kokoro TTS prompts, Wav2Vec2 scoring, local LLM phrase generation."
readme = "README.md"
# Tested on 3.11 and 3.12. No upper bound on purpose, matching install.py:
# newer interpreters get a warning there (WHEEL_TESTED_MAX), and the
# binary-only dependency install fails loudly if wheels are missing.
requires-python = ">=3.11"
license = { file = "LICENSE" }

# The app is run from the project root (`python main.py`) and is not meant to
# be installed; this file documents project metadata and the package layout.
# Runtime dependencies stay in requirements.txt (plus llm_server/ and
# pronunciation/acoustic/, pronunciation/phoneme/ requirements) because they
# are installed per-machine with CPU/CUDA variants.
[tool.setuptools]
packages = [
    "mimora",
    "pronunciation",
    "pronunciation.acoustic",
    "pronunciation.common",
    "pronunciation.none",
    "pronunciation.phoneme",
]

[tool.setuptools.dynamic]
version = { attr = "mimora.__version__" }
